log entry created

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:textAllCaps="false"
-        android:background="#DBCD55"
+        android:background="#EDD933"
         android:id="@+id/logbtn"/>
 
 </LinearLayout>
