--- a/app/src/main/res/layout/activity_log_entry.xml
+++ b/app/src/main/res/layout/activity_log_entry.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="50px"
+    android:background="@drawable/background"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:layout_width="match_parent"
@@ -11,8 +12,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your name"
-        android:id="@+id/name"/>
+        android:hint=" Enter your name"
+        android:id="@+id/name"
+        android:drawableLeft="@drawable/baseline_person_24"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,8 +22,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your admission no."
-        android:id="@+id/admno"/>
+        android:hint=" Enter your admission no."
+        android:id="@+id/admno"
+        android:drawableLeft="@drawable/baseline_format_list_numbered_24"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,9 +32,10 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your system no."
+        android:hint=" Enter your system no."
         android:id="@+id/sysno"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:drawableLeft="@drawable/baseline_computer_24"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,8 +43,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your department name "
-        android:id="@+id/dept"/>
+        android:hint=" Enter your department name "
+        android:id="@+id/dept"
+        android:drawableLeft="@drawable/baseline_school_24"/>
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
