--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,13 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="50px"
+    android:background="@drawable/background"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="80dp"
+        android:background="@drawable/download"
+        android:layout_marginBottom="140px"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,24 +17,27 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your username"
-        android:id="@+id/uname"/>
+        android:hint=" Enter your username"
+        android:id="@+id/uname"
+        android:drawableLeft="@drawable/baseline_sentiment_very_satisfied_24"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="password"/>
+        android:text="Password"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter your password"
+        android:hint=" Enter your password"
         android:inputType="textPassword"
-        android:id="@+id/pass"/>
+        android:id="@+id/pass"
+        android:drawableLeft="@drawable/baseline_remove_red_eye_24"/>
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
         android:textAllCaps="false"
-        android:background="#EDD933"
+        android:background="#EFDC39"
+        android:layout_margin="20px"
         android:id="@+id/logbtn"/>
 
 </LinearLayout>
